--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install --force && CI=false npm run build"
+buildCommand = "npm install --legacy-peer-deps && CI=false npm run build"
 
 [deploy]
 startCommand = "npx serve -s build"
@@ -17,3 +17,4 @@ CI = "false"
 NPM_CONFIG_PRODUCTION = "false"
 NODE_OPTIONS = "--max_old_space_size=4096"
 NIXPACKS_NODE_VERSION = "18"
+NIXPACKS_YARN_ENABLE = "false"
