fix: Исправлены проблемы с зависимостями и конфигурацией сборки

--- a/railway.toml
+++ b/railway.toml
@@ -19,3 +19,4 @@ NIXPACKS_NODE_VERSION = "18"
 NIXPACKS_YARN_ENABLE = "false"
 PYTHON_VERSION = "3.9"
 SKIP_PREFLIGHT_CHECK = "true"
+DISABLE_ESLINT_PLUGIN = "true"
