--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,8 +12,15 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
-    "serve": "^14.2.1",
-    "web-vitals": "^2.1.4"
+    "typescript": "4.9.5",
+    "web-vitals": "^2.1.4",
+    "postcss": "^8.4.31"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.12"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -21,12 +28,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.12"
   },
   "browserslist": {
     "production": [
