fix: Исправлены проблемы с зависимостями и конфигурацией

--- a/webapp/.env.production
+++ b/webapp/.env.production
@@ -1,2 +1,5 @@
+SKIP_PREFLIGHT_CHECK=true
+TSC_COMPILE_ON_ERROR=true
+DISABLE_ESLINT_PLUGIN=true
 REACT_APP_API_URL=https://api.collegedesk.railway.app
-REACT_APP_BOT_TOKEN=ваш_токен_бота
+REACT_APP_BOT_TOKEN=${BOT_TOKEN}
