--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,7 +14,8 @@
     "react-transition-group": "^4.4.5",
     "typescript": "4.9.5",
     "web-vitals": "^2.1.4",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "postcss-preset-env": "^9.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
