fix: Обновлены зависимости PostCSS и конфигурация сборки

--- a/railway.toml
+++ b/railway.toml
@@ -20,3 +20,6 @@ NIXPACKS_YARN_ENABLE = "false"
 PYTHON_VERSION = "3.9"
 SKIP_PREFLIGHT_CHECK = "true"
 DISABLE_ESLINT_PLUGIN = "true"
+BOT_TOKEN = "${BOT_TOKEN}"
+WEBAPP_URL = "https://collegedesk-production.up.railway.app"
+DATABASE_URL = "${DATABASE_URL}"
