--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,7 +15,10 @@
     "typescript": "4.9.5",
     "web-vitals": "^2.1.4",
     "postcss": "^8.4.31",
-    "postcss-preset-env": "^9.3.0"
+    "postcss-preset-env": "^9.3.0",
+    "postcss-normalize": "^10.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-modules-values": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
