fix: Обновлена конфигурация сборки и зависимости

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -44,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "postcss": "^8.4.31",
+    "css-loader": "^6.8.1",
+    "cssnano": "^6.0.1"
   }
 }
