fix: Оптимизация проекта для Railway
- Обновлена конфигурация сборки React приложения
- Добавлены необходимые переменные окружения
- Исправлены проблемы с PostCSS и зависимостями
- Оптимизирована конфигурация supervisor

Технические изменения:
- Настроен NODE_OPTIONS для оптимизации памяти
- Добавлен SKIP_PREFLIGHT_CHECK и DISABLE_ESLINT_PLUGIN
- Обновлены настройки логирования в supervisor
- Оптимизирована последовательность установки пакетов

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,19 +1,31 @@
 [supervisord]
 nodaemon=true
+user=root
 
 [program:nginx]
 command=nginx -g 'daemon off;'
 autostart=true
 autorestart=true
+priority=10
 
 [program:bot]
-command=python /app/bot/main.py
+command=python3 /app/bot/main.py
 directory=/app/bot
 autostart=true
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+priority=20
 
 [program:backend]
 command=uvicorn backend.app.main:app --host 0.0.0.0 --port 8000
 directory=/app/backend
 autostart=true
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+priority=30
