--- a/webapp/.env.production
+++ b/webapp/.env.production
@@ -3,3 +3,5 @@ TSC_COMPILE_ON_ERROR=true
 DISABLE_ESLINT_PLUGIN=true
 REACT_APP_API_URL=https://api.collegedesk.railway.app
 REACT_APP_BOT_TOKEN=${BOT_TOKEN}
+NODE_ENV=production
+CI=false
