fix: Оптимизация конфигурации для Railway
- Добавлен endpoint для healthcheck
- Обновлена конфигурация nginx для проксирования
- Оптимизирован порядок запуска сервисов
- Добавлена инициализация файлов данных

Технические изменения:
- Настроены зависимости между сервисами в supervisor
- Добавлены задержки startsecs для стабильного запуска
- Изменен healthcheck path на /api/health
- Оптимизирована конфигурация для production

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,11 +2,25 @@
 nodaemon=true
 user=root
 
+[program:backend]
+command=uvicorn backend.app.main:app --host 0.0.0.0 --port 8000
+directory=/app/backend
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+priority=10
+startsecs=5
+
 [program:nginx]
 command=nginx -g 'daemon off;'
 autostart=true
 autorestart=true
-priority=10
+priority=20
+startsecs=10
+depends_on=backend
 
 [program:bot]
 command=python3 /app/bot/main.py
@@ -17,15 +31,6 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-priority=20
-
-[program:backend]
-command=uvicorn backend.app.main:app --host 0.0.0.0 --port 8000
-directory=/app/backend
-autostart=true
-autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
 priority=30
+startsecs=15
+depends_on=backend
