fix: Оптимизация конфигурации для Railway
- Увеличены таймауты для healthcheck
- Добавлен специальный endpoint для проверки здоровья
- Оптимизированы настройки supervisor
- Исправлены пути к файлам данных в боте

Технические изменения:
- Добавлен startupTimeout и healthcheckInterval
- Увеличены таймауты для nginx и uvicorn
- Исправлены абсолютные пути в боте
- Оптимизирована конфигурация прокси

--- a/railway.toml
+++ b/railway.toml
@@ -7,6 +7,8 @@ healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 numReplicas = 1
+startupTimeout = "5m"
+healthcheckInterval = "30s"
 
 [deploy.envs]
 PORT = "80"
