--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 user=root
 
 [program:backend]
-command=uvicorn backend.app.main:app --host 0.0.0.0 --port 8000
+command=uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 --timeout-keep-alive 300
 directory=/app/backend
 autostart=true
 autorestart=true
