--- a/webapp/nginx.conf
+++ b/webapp/nginx.conf
@@ -3,12 +3,14 @@ server {
     
     # Проксирование API запросов к backend
     location /api/ {
-        proxy_pass http://localhost:8000/;
+        proxy_pass http://127.0.0.1:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
     }
 
     # Обработка статических файлов React
@@ -16,5 +18,12 @@ server {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+    }
+
+    # Добавляем endpoint для healthcheck
+    location = /api/health {
+        proxy_pass http://127.0.0.1:8000/health;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
     }
 }
