fix: Исправление проблем с запуском сервисов
- Исправлена установка Python и зависимостей
- Обновлены команды запуска в supervisor
- Оптимизированы настройки healthcheck

Технические изменения:
- Добавлена установка python3 и pip в финальный образ
- Исправлены пути запуска uvicorn и python3
- Увеличены таймауты для корректной инициализации
- Оптимизированы параметры supervisor

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,8 +3,8 @@ nodaemon=true
 user=root
 
 [program:backend]
-command=uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 --timeout-keep-alive 300
-directory=/app/backend
+command=python3 -m uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 --timeout-keep-alive 300
+directory=/app
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -12,7 +12,8 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=10
-startsecs=5
+startsecs=30
+startretries=3
 
 [program:nginx]
 command=nginx -g 'daemon off;'
@@ -20,10 +21,10 @@ autostart=true
 autorestart=true
 priority=20
 startsecs=10
-depends_on=backend
+startretries=3
 
 [program:bot]
-command=python3 /app/bot/main.py
+command=python3 main.py
 directory=/app/bot
 autostart=true
 autorestart=true
@@ -32,5 +33,5 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=30
-startsecs=15
-depends_on=backend
+startsecs=30
+startretries=3
