fix: Оптимизация конфигурации для Railway
- Увеличены таймауты для healthcheck
- Оптимизирована конфигурация supervisor
- Улучшен механизм проверки здоровья
- Исправлены проблемы с Python зависимостями

Технические изменения:
- Увеличен healthcheckTimeout до 600 секунд
- Увеличен startupTimeout до 15 минут
- Оптимизированы параметры supervisor
- Добавлена проверка прав доступа к файлам
- Исправлены пути к Python и зависимостям

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 user=root
 
 [program:backend]
-command=python3 -m uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 --timeout-keep-alive 300
+command=python3 -m uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 --workers 1 --timeout-keep-alive 300
 directory=/app
 autostart=true
 autorestart=true
@@ -12,15 +12,15 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=10
-startsecs=30
-startretries=3
+startsecs=10
+startretries=5
 
 [program:nginx]
 command=nginx -g 'daemon off;'
 autostart=true
 autorestart=true
 priority=20
-startsecs=10
+startsecs=5
 startretries=3
 
 [program:bot]
@@ -33,5 +33,5 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=30
-startsecs=30
-startretries=3
+startsecs=10
+startretries=5
