--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,8 @@
 [supervisord]
 nodaemon=true
 user=root
+logfile=/var/log/supervisord.log
+pidfile=/var/run/supervisord.pid
 
 [program:backend]
 command=python3 -m uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 --workers 1 --timeout-keep-alive 300
@@ -12,16 +14,18 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=10
-startsecs=10
+startsecs=15
 startretries=5
+stopwaitsecs=30
 
 [program:nginx]
 command=nginx -g 'daemon off;'
 autostart=true
 autorestart=true
 priority=20
-startsecs=5
+startsecs=10
 startretries=3
+stopwaitsecs=30
 
 [program:bot]
 command=python3 main.py
@@ -33,5 +37,9 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=30
-startsecs=10
+startsecs=15
 startretries=5
+stopwaitsecs=30
+environment=
+    PYTHONUNBUFFERED=1,
+    PATH="/usr/local/bin:/usr/bin:/bin"
