fix: Исправление проблем с запуском сервисов
- Оптимизирована конфигурация supervisor
- Исправлены пути запуска Python-модулей
- Добавлен единый файл requirements.txt
- Улучшена структура запуска сервисов

Технические изменения:
- Обновлены команды запуска в supervisor
- Добавлены правильные пути к модулям Python
- Оптимизированы параметры запуска сервисов
- Исправлены проблемы с зависимостями

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -28,8 +28,8 @@ startretries=3
 stopwaitsecs=30
 
 [program:bot]
-command=python3 main.py
-directory=/app/bot
+command=python3 -m bot.main
+directory=/app
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
