--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/var/log/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:backend]
-command=python3 -m uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 --workers 1 --timeout-keep-alive 300
+command=python3 -m uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 --workers 1
 directory=/app
 autostart=true
 autorestart=true
@@ -28,7 +28,7 @@ startretries=3
 stopwaitsecs=30
 
 [program:bot]
-command=python3 -m bot.main
+command=python3 bot/main.py
 directory=/app
 autostart=true
 autorestart=true
