fix: Оптимизация конфигурации supervisor
- Добавлена переменная PYTHONPATH для корректного импорта модулей
- Улучшена конфигурация окружения для backend и bot
- Оптимизированы настройки запуска сервисов

Технические изменения:
- Добавлен PYTHONPATH=/app для всех Python-сервисов
- Улучшена обработка переменных окружения
- Оптимизированы параметры запуска процессов
- Исправлены проблемы с импортом модулей

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -17,6 +17,9 @@ priority=10
 startsecs=15
 startretries=5
 stopwaitsecs=30
+environment=
+    PYTHONPATH=/app,
+    PYTHONUNBUFFERED=1
 
 [program:nginx]
 command=nginx -g 'daemon off;'
@@ -41,5 +44,6 @@ startsecs=15
 startretries=5
 stopwaitsecs=30
 environment=
+    PYTHONPATH=/app,
     PYTHONUNBUFFERED=1,
     PATH="/usr/local/bin:/usr/bin:/bin"
