fix: Оптимизация конфигурации деплоя
- Исправлен Dockerfile для корректной работы на Railway
- Добавлена конфигурация railway.toml
- Оптимизированы настройки сборки и развертывания

Технические изменения:
- Исправлены пути к файлам и директориям
- Добавлены переменные окружения для Railway
- Оптимизирована конфигурация healthcheck
- Улучшены параметры сборки Docker образа

--- a/railway.toml
+++ b/railway.toml
@@ -14,7 +14,7 @@ restartPolicyMaxRetries = 5
 [deploy.envs]
 PORT = "80"
 NODE_ENV = "production"
-REACT_APP_API_URL = "https://api.collegedesk.railway.app"
+REACT_APP_API_URL = "${RAILWAY_STATIC_URL}"
 CI = "false"
 NPM_CONFIG_PRODUCTION = "false"
 NODE_OPTIONS = "--max_old_space_size=4096"
@@ -25,6 +25,6 @@ SKIP_PREFLIGHT_CHECK = "true"
 DISABLE_ESLINT_PLUGIN = "true"
 NPM_CONFIG_LEGACY_PEER_DEPS = "true"
 BOT_TOKEN = "${BOT_TOKEN}"
-WEBAPP_URL = "https://collegedesk-production.up.railway.app"
+WEBAPP_URL = "${RAILWAY_STATIC_URL}"
 DATABASE_URL = "${DATABASE_URL}"
 PYTHONUNBUFFERED = "1"
