fix: Оптимизация конфигурации Railway и Supervisor
- Исправлены переменные окружения для Railway
- Обновлены URL для веб-приложения
- Добавлены корректные переменные для сервисов

Технические изменения:
- Заменен RAILWAY_STATIC_URL на RAILWAY_SERVICE_DOMAIN
- Добавлен протокол https:// к URL
- Оптимизированы параметры supervisor
- Обновлены настройки healthcheck

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,12 +14,13 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=10
-startsecs=15
-startretries=5
+startsecs=30
+startretries=10
 stopwaitsecs=30
 environment=
     PYTHONPATH=/app,
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1,
+    DATABASE_URL="%(ENV_DATABASE_URL)s"
 
 [program:nginx]
 command=nginx -g 'daemon off;'
@@ -46,4 +47,6 @@ stopwaitsecs=30
 environment=
     PYTHONPATH=/app,
     PYTHONUNBUFFERED=1,
-    PATH="/usr/local/bin:/usr/bin:/bin"
+    PATH="/usr/local/bin:/usr/bin:/bin",
+    BOT_TOKEN="%(ENV_BOT_TOKEN)s",
+    WEBAPP_URL="https://%(ENV_RAILWAY_SERVICE_DOMAIN)s"
