--- a/railway.toml
+++ b/railway.toml
@@ -14,7 +14,7 @@ restartPolicyMaxRetries = 10
 [deploy.envs]
 PORT = "80"
 NODE_ENV = "production"
-REACT_APP_API_URL = "${RAILWAY_STATIC_URL}"
+REACT_APP_API_URL = "https://${RAILWAY_SERVICE_DOMAIN}"
 CI = "false"
 NPM_CONFIG_PRODUCTION = "false"
 NODE_OPTIONS = "--max_old_space_size=4096"
@@ -25,6 +25,8 @@ SKIP_PREFLIGHT_CHECK = "true"
 DISABLE_ESLINT_PLUGIN = "true"
 NPM_CONFIG_LEGACY_PEER_DEPS = "true"
 BOT_TOKEN = "${BOT_TOKEN}"
-WEBAPP_URL = "${RAILWAY_STATIC_URL}"
+WEBAPP_URL = "https://${RAILWAY_SERVICE_DOMAIN}"
 DATABASE_URL = "${DATABASE_URL}"
 PYTHONUNBUFFERED = "1"
+RAILWAY_DOCKERFILE_PATH = "Dockerfile"
+RAILWAY_HEALTHCHECK_PATH = "/api/health"
