--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,8 +14,8 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=10
-startsecs=30
-startretries=10
+startsecs=60
+startretries=15
 stopwaitsecs=30
 environment=
     PYTHONPATH=/app,
@@ -23,16 +23,16 @@ environment=
     DATABASE_URL="%(ENV_DATABASE_URL)s"
 
 [program:nginx]
-command=nginx -g 'daemon off;'
+command=bash -c "sleep 30 && nginx -g 'daemon off;'"
 autostart=true
 autorestart=true
 priority=20
-startsecs=10
-startretries=5
+startsecs=40
+startretries=10
 stopwaitsecs=30
 
 [program:bot]
-command=python3 bot/main.py
+command=bash -c "sleep 45 && python3 bot/main.py"
 directory=/app
 autostart=true
 autorestart=true
@@ -41,8 +41,8 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=30
-startsecs=30
-startretries=10
+startsecs=60
+startretries=15
 stopwaitsecs=30
 environment=
     PYTHONPATH=/app,
