--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,7 +14,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=10
-startsecs=10
+startsecs=30
 startretries=15
 stopwaitsecs=30
 environment=
@@ -23,7 +23,7 @@ environment=
     DATABASE_URL="%(ENV_DATABASE_URL)s"
 
 [program:nginx]
-command=bash -c "sleep 10 && nginx -g 'daemon off;'"
+command=bash -c "sleep 35 && nginx -g 'daemon off;'"
 autostart=true
 autorestart=true
 priority=20
@@ -32,7 +32,7 @@ startretries=10
 stopwaitsecs=30
 
 [program:bot]
-command=bash -c "sleep 15 && python3 bot/main.py"
+command=bash -c "sleep 40 && python3 bot/main.py --disable-webhook"
 directory=/app
 autostart=true
 autorestart=true
