--- a/webapp/nginx.conf
+++ b/webapp/nginx.conf
@@ -1,7 +1,17 @@
 server {
     listen 80;
     
-    # Проксирование API запросов к backend
+    # Health check endpoint
+    location = /api/health {
+        proxy_pass http://0.0.0.0:8000/health;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # API endpoints
     location /api/ {
         proxy_pass http://0.0.0.0:8000/;
         proxy_http_version 1.1;
@@ -11,6 +21,7 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
+        proxy_send_timeout 300;
     }
 
     # Обработка статических файлов React
