--- a/webapp/nginx.conf
+++ b/webapp/nginx.conf
@@ -4,11 +4,16 @@ server {
     # Health check endpoint
     location = /api/health {
         proxy_pass http://0.0.0.0:8000/health;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
+        proxy_read_timeout 600;
+        proxy_connect_timeout 600;
+        proxy_send_timeout 600;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        
+        # Добавляем проверку доступности backend
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_next_upstream_tries 3;
+        proxy_next_upstream_timeout 600s;
     }
 
     # API endpoints
