feat: добавлена конфигурация supervisord для управления сервисами

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -50,5 +50,5 @@ environment=
     PYTHONUNBUFFERED=1,
     PATH="/usr/local/bin:/usr/bin:/bin",
     BOT_TOKEN="%(ENV_BOT_TOKEN)s",
-    WEBAPP_URL="https://%(ENV_RAILWAY_PUBLIC_DOMAIN)s",
-    TELEGRAM_WEBHOOK_URL="https://%(ENV_RAILWAY_PUBLIC_DOMAIN)s/bot/webhook"
+    WEBAPP_URL="%(ENV_WEBAPP_URL)s",
+    TELEGRAM_WEBHOOK_URL="%(ENV_WEBAPP_URL)s/bot/webhook"
