--- a/supervisord.conf
+++ b/supervisord.conf
@@ -46,7 +46,7 @@ startsecs=30
 startretries=10
 stopwaitsecs=30
 environment=
-    PYTHONPATH=/app,
+    PYTHONPATH=/app:/app/bot,
     PYTHONUNBUFFERED=1,
     PATH="/usr/local/bin:/usr/bin:/bin",
     BOT_TOKEN="%(ENV_BOT_TOKEN)s",
