--- a/webapp/nginx.conf
+++ b/webapp/nginx.conf
@@ -3,7 +3,7 @@ server {
     
     # Health check endpoint
     location = /api/health {
-        proxy_pass http://0.0.0.0:8000/health;
+        proxy_pass http://localhost:8000/health;
         proxy_read_timeout 900;
         proxy_connect_timeout 900;
         proxy_send_timeout 900;
@@ -18,7 +18,7 @@ server {
 
     # API endpoints
     location /api/ {
-        proxy_pass http://0.0.0.0:8000/;
+        proxy_pass http://localhost:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
