--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiogram==2.25.1
+# Backend dependencies
 fastapi>=0.100.0
 uvicorn>=0.23.0
 python-multipart>=0.0.6
@@ -8,7 +8,11 @@ xlrd>=2.0.1
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 pydantic>=2.0.0
-python-telegram-bot>=20.6
-aiohttp>=3.8.5
+
+# Bot dependencies
+aiogram>=3.0.0
 python-dotenv>=1.0.0
+
+# Common dependencies
+aiohttp>=3.8.5
 supervisor>=4.2.5
